Fix flickering bug when the cursor came from the bottom; Fix borders

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -136,9 +136,8 @@ html.scrollDisabled {
 }
 
 .box.style1 {
-  cursor: pointer;
-  padding: 1em 1em 1em;
-  border: 5px solid #000;
+  padding: 1em 1em 1em 1em;
+  border: 0.35rem solid #000;
   border-radius: 20px;
 
   -moz-transition: top 0.2s ease-in-out;
@@ -150,21 +149,28 @@ html.scrollDisabled {
   position: relative;
 }
 
+.image.featured {
+  border-radius: 10px;
+  display: block;
+  width: 100%;
+  border: 0.25rem solid #333;
+  /* box-shadow: 0 0 3pt 2pt #333; */
+  margin: 0 0 0.8em 0;
+}
+
 .box.style1 h3 {
   font-size: 20px;
 }
 
-.box.style1:hover {
-  border: 5px solid #555;
-  top: -5px;
-}
-
-.box.style1 img {
+.game-detail {
+  cursor: pointer;
   border-radius: 10px;
+  height: 100.5%;
 }
 
-.image.featured {
-  border: 2px solid #555;
+.game-detail:hover .box.style1 {
+  border-color: #555;
+  top: -7px;
 }
 
 #contact {
@@ -796,7 +802,7 @@ footer > p {
 
 .row > * {
   /* padding: 25px 5px 0; */
-  padding: 25px 0 0 25px;
+  padding: 10px 10px 10px 10px;
 }
 
 .row.gtr-uniform {
@@ -1039,7 +1045,8 @@ footer > p {
   }
 
   .row > * {
-    padding: 25px 5px 0;
+    padding: 10px 10px 10px 10px;
+    /* padding: 25px 5px 25px; */
   }
 
   .row.gtr-uniform {
@@ -1958,12 +1965,6 @@ article:last-child {
   display: block;
   width: 100%;
   transform: scale(0.75);
-}
-
-.image.featured {
-  display: block;
-  width: 100%;
-  margin: 0 0 1em 0;
 }
 
 .image.left {
